--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="row align-items-center justify-content-center mx-0 ">
         <div class="d-inline-flex w-66 flex-row align-items-center justify-content-evenly container-how-app-left">
             <div class="d-flex flex-column w-16 text-center">
-                <img class="img-fluid" src="images/img-1-fundo.PNG">
+                <img class="img-fluid" src="images/img-1-fundo.png">
             </div>
             <div class="d-flex flex-column w-50 text-center">
                 <h3>Interface com pontos de ônibus, metro e trem</h3>
@@ -90,7 +90,7 @@
     <div class="row align-items-center justify-content-center mx-0 ">
         <div class="d-inline-flex w-66 flex-row align-items-center justify-content-evenly container-how-app-left">
             <div class="d-flex flex-column w-16 text-center">
-                <img class="img-fluid" src="images/img-3-fundo.PNG">
+                <img class="img-fluid" src="images/img-3-fundo.png">
             </div>
             <div class="d-flex flex-column w-50 text-center">
                 <h3>Planejamento da rota</h3>
@@ -110,7 +110,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum nisi quos, autem ex expedita ducimus similique ad amet exercitationem deserunt dolore a eligendi, veritatis perspiciatis incidunt ratione obcaecati nostrum.</p>
             </div>
             <div class="d-flex flex-column w-16 text-center">
-                <img class="img-fluid" src="images/img-4-fundo.PNG">
+                <img class="img-fluid" src="images/img-4-fundo.png">
             </div>
         </div>
     </div>
@@ -122,7 +122,7 @@
     <div class="row align-items-center justify-content-center mx-0 ">
         <div class="d-inline-flex w-66 flex-row align-items-center justify-content-evenly container-how-app-left">
             <div class="d-flex flex-column w-16 text-center">
-                <img class="img-fluid" src="images/img-5-fundo.PNG">
+                <img class="img-fluid" src="images/img-5-fundo.png">
             </div>
             <div class="d-flex flex-column w-50 text-center">
                 <h3>Localização da locomoção em tempo real</h3>
@@ -142,7 +142,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum nisi quos, autem ex expedita ducimus similique ad amet exercitationem deserunt dolore a eligendi, veritatis perspiciatis incidunt ratione obcaecati nostrum.</p>
             </div>
             <div class="d-flex flex-column w-16 text-center">
-                <img class="img-fluid" src="images/img-6-fundo.PNG">
+                <img class="img-fluid" src="images/img-6-fundo.png">
             </div>
         </div>
     </div>
