Adiciona descrição às telas

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="col-lg-8">
             <div class="container-conteudo">
                 <h2 class="text-center">Sobre o aplicativo</h2>
-                <p class="descricao">Itinerar tem o intuito de auxiliar no planejamento da mobilidade da população, criando uma conexão usuário-usuário e usuário-empresa a partir de informações compartilhadas em tempo real do transporte coletivo, principalmente, ônibus, trens e metrôs e dos seus respectivos estados. Ele seria capaz de informar o fluxo de pessoas, o trânsito caso o usuário estivesse em vias urbanas, o atraso dos transportes e a localização do veículo em tempo real. Além de permitir que o usuário crie ocorrências dos acontecimentos nos pontos ou linhas, caso seja interrompido temporariamente por problemas meteorológicos ou técnicos por exemplo, a fim de outros usuários consumidores das mesmas rotas poderem replanejar suas trajetórias fazendo com que economizem tempo e que evitassem o inconveniente</p> 
+                <p class="descricao">Um aplicativo gratuito ao usuário, que tem o intuito de auxiliar no planejamento da mobilidade da população em relação aos ônibus, trens e metrôs.</p> 
             </div>
         </div>
     </div>
@@ -62,7 +62,7 @@
             </div>
             <div class="d-flex flex-column w-50 text-center">
                 <h3>Interface com pontos de ônibus, metro e trem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum nisi quos, autem ex expedita ducimus similique ad amet exercitationem deserunt dolore a eligendi, veritatis perspiciatis incidunt ratione obcaecati nostrum.</p>
+                <p>Mapeamos pontos perto de sua localização onde você pode pegar transporte público.</p>
             </div>
         </div>
     </div>
@@ -74,8 +74,8 @@
     <div class="row align-items-center justify-content-center mx-0 ">
         <div class="d-inline-flex w-66 flex-row align-items-center justify-content-evenly container-how-app-right">
             <div class="d-flex flex-column w-50 text-center">
-                <h3>Situação do ponto de espera</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum nisi quos, autem ex expedita ducimus similique ad amet exercitationem deserunt dolore a eligendi, veritatis perspiciatis incidunt ratione obcaecati nostrum.</p>
+                <h3>Situação estrutural do ponto de espera</h3>
+                <p>Caso desejado, também é possível visualizar a situação do ponto de onibus, estação de trem ou de metrô clicando sobre o ponto.</p>
             </div>
             <div class="d-flex flex-column w-16 text-center">
                 <img class="img-fluid" src="images/img-2-fundo.png">
@@ -94,7 +94,7 @@
             </div>
             <div class="d-flex flex-column w-50 text-center">
                 <h3>Planejamento da rota</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum nisi quos, autem ex expedita ducimus similique ad amet exercitationem deserunt dolore a eligendi, veritatis perspiciatis incidunt ratione obcaecati nostrum.</p>
+                <p>Você também poderá escolher um destino a qual quer ir e nós traceremos uma rota com base na sua preferência de transporte, e com ponto mais próximo a você, da maneira mais eficiênte possível para chegar mais rápido ao seu destino.</p>
             </div>
         </div>
     </div>
@@ -107,7 +107,7 @@
         <div class="d-inline-flex w-66 flex-row align-items-center justify-content-evenly container-how-app-right">
             <div class="d-flex flex-column w-50 text-center">
                 <h3>Informações em tempo real</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum nisi quos, autem ex expedita ducimus similique ad amet exercitationem deserunt dolore a eligendi, veritatis perspiciatis incidunt ratione obcaecati nostrum.</p>
+                <p>Além disso você pode ver as ocorrências dos últimos usuários sobre a situação do transporte escolhido.</p>
             </div>
             <div class="d-flex flex-column w-16 text-center">
                 <img class="img-fluid" src="images/img-4-fundo.png">
@@ -126,7 +126,7 @@
             </div>
             <div class="d-flex flex-column w-50 text-center">
                 <h3>Localização da locomoção em tempo real</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum nisi quos, autem ex expedita ducimus similique ad amet exercitationem deserunt dolore a eligendi, veritatis perspiciatis incidunt ratione obcaecati nostrum.</p>
+                <p> Contamos com um sistema de rastreamento do transporte para que sua localização seja mostrada em tempo real. Além de também mostrar a rota pela qual o transporte selecionado irá fazer. </p>
             </div>
         </div>
     </div>
@@ -139,7 +139,7 @@
         <div class="d-inline-flex w-66 flex-row align-items-center justify-content-evenly container-how-app-right">
             <div class="d-flex flex-column w-50 text-center">
                 <h3>Publicações de ocorrências</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum nisi quos, autem ex expedita ducimus similique ad amet exercitationem deserunt dolore a eligendi, veritatis perspiciatis incidunt ratione obcaecati nostrum.</p>
+                <p>Assim como os outros usuários você pode publicar sua própria ocorrência no aplicativo, podendo escolher a linha que está ocorrendo o problema e podendo aderir informações a mais. Além disso, por meio do acesso ao seu perfil, também é possível enviar reclamações diretamente para a agência de transporte.</p>
             </div>
             <div class="d-flex flex-column w-16 text-center">
                 <img class="img-fluid" src="images/img-6-fundo.png">
